--- a/PDE/PE1/PE1.ipynb
+++ b/PDE/PE1/PE1.ipynb
@@ -400,16 +400,6 @@
     "                    b[i-1] = 2 * (0.5-lattice[i-1])*(lattice[i+1]-0.5)/(h**2)\n",
     "                    b[i] = 2 * (0.5-lattice[i+1])*(0.5-lattice[i+2])/(2.0 * h**2)\n",
     "                break\n",
-    "                # for grid with non-uniform spacing\n",
-    "                # if (i%2==0):\n",
-    "                #     b[i-1] = 2 * (0.5-lattice[i+1])*(0.5-lattice[i+2])/(lattice[i+1]-lattice[i])/(lattice[i+2]-lattice[i])\n",
-    "                #     b[i] = 2 * (0.5-lattice[i])*(lattice[i+2]-0.5)/(lattice[i+1]-lattice[i])/(lattice[i+2]-lattice[i+1])\n",
-    "                #     b[i+1] = 2 * (0.5-lattice[i])*(0.5-lattice[i+1])/(lattice[i+2]-lattice[i])/(lattice[i+2]-lattice[i+1])\n",
-    "                # else:\n",
-    "                #     b[i-2] = 2 * (0.5-lattice[i])*(0.5-lattice[i+1])/(lattice[i]-lattice[i-1])/(lattice[i+1]-lattice[i-1])\n",
-    "                #     b[i-1] = 2 * (0.5-lattice[i-1])*(lattice[i+1]-0.5)/(lattice[i]-lattice[i-1])/(lattice[i+1]-lattice[i])\n",
-    "                #     b[i] = 2 * (0.5-lattice[i+1])*(0.5-lattice[i+2])/(lattice[i+3]-lattice[i+1])/(lattice[i+3]-lattice[i+2])\n",
-    "                # break\n",
     "    return b"
    ]
   },
@@ -423,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 67,
    "id": "89278ebd-a9b4-4288-a7cc-a350ae476eca",
    "metadata": {},
    "outputs": [],
@@ -434,33 +424,26 @@
     "    # u: solution vector\n",
     "    # return: the appoximated solution u(x) \n",
     "    if (ansatz=='linear'):\n",
-    "    # if (True):\n",
-    "        # assert(x<1)\n",
-    "        # assert(x >= 0)\n",
+    "        assert(x<1)\n",
+    "        assert(x >= 0)\n",
     "        i = 0\n",
     "        while x > lattice[i+1]:\n",
     "            i += 1\n",
     "        t = (x - lattice[i]) / (lattice[i+1] - lattice[i])\n",
     "        return (1 - t) * u[i] + t * u[i+1]\n",
     "    else:\n",
-    "        # assert(x<1)\n",
-    "        # assert(x >= 0)\n",
+    "        assert(x<1)\n",
+    "        assert(x >= 0)\n",
     "        i = 0\n",
     "        h = lattice[1]-lattice[0]\n",
     "        while x > lattice[i+1]:\n",
     "            i += 1\n",
     "        result = 0\n",
     "        if (i%2==0):\n",
-    "            # result += (x-lattice[i+1])*(x-lattice[i+2])/(lattice[i]-lattice[i+1])/(lattice[i]-lattice[i+2])*u[i]\n",
-    "            # result += (x-lattice[i])*(x-lattice[i+2])/(lattice[i+1]-lattice[i])/(lattice[i+1]-lattice[i+2])*u[i+1]\n",
-    "            # result += (x-lattice[i])*(x-lattice[i+1])/(lattice[i+2]-lattice[i])/(lattice[i+2]-lattice[i+1])*u[i+2]\n",
     "            result += (x-lattice[i+1])*(x-lattice[i+2])/(2.0 * h**2)*u[i]\n",
     "            result += (x-lattice[i])*(lattice[i+2]-x)/(h**2)*u[i+1]\n",
     "            result += (x-lattice[i])*(x-lattice[i+1])/(2.0 * h**2)*u[i+2]\n",
     "        else:\n",
-    "            # result += (x-lattice[i-1])*(x-lattice[i+1])/(lattice[i]-lattice[i-1])/(lattice[i]-lattice[i+1])*u[i-1]\n",
-    "            # result += (x-lattice[i-1])*(x-lattice[i])/(lattice[i+1]-lattice[i-1])/(lattice[i+1]-lattice[i])*u[i]\n",
-    "            # result += (x-lattice[i])*(x-lattice[i+1])/(lattice[i-1]-lattice[i])/(lattice[i-1]-lattice[i+1])*u[i+1]\n",
     "            result += (x-lattice[i])*(x-lattice[i+1])/(2.0 * h**2)*u[i-1]\n",
     "            result += (x-lattice[i-1])*(lattice[i+1]-x)/(h**2)*u[i]\n",
     "            result += (x-lattice[i-1])*(x-lattice[i])/(2.0 * h**2)*u[i+1]\n",
@@ -471,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "02a83942-8e2e-4408-b026-74874b630868",
    "metadata": {},
    "outputs": [],
@@ -589,14 +572,9 @@
     "    # return: pair (maximal distance between two nodes, L2-error)\n",
     "    \n",
     "    h = lattice[1]-lattice[0]\n",
-    "    # error, _ = quad(lambda xi: (sol(xi) - np.interp(xi, x, u))**2, x[0], x[-1])\n",
     "    error, _ = quad(lambda xi: (sol(xi) - interpolate(xi, lattice, u, ansatz))**2, lattice[0], lattice[-1])\n",
-    "\n",
     "    error = np.sqrt(error)\n",
     "    \n",
-    "\n",
-    "    # interpolate(x, lattice, u, ansatz='linear'):\n",
-    "\n",
     "    return h, error"
    ]
   },
@@ -685,17 +663,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 68,
    "id": "cb11a014-1d5e-4f5e-9560-134de13d8e57",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1c9007672d0>]"
+       "[<matplotlib.lines.Line2D at 0x1c900f68990>]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -725,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 69,
    "id": "804c8ab9-a9f0-4532-978d-eee2e6c724b5",
    "metadata": {
     "tags": []
@@ -751,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 71,
    "id": "5652efd5-365e-4103-beb7-b3087ade5dca",
    "metadata": {},
    "outputs": [],
@@ -768,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 72,
    "id": "ded1074f-f4a5-4e90-80c5-55e854c1d4ea",
    "metadata": {},
    "outputs": [
@@ -797,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 73,
    "id": "adb3c1f3-93c5-4330-a6a1-f3ec707def8d",
    "metadata": {
     "tags": []
@@ -823,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 74,
    "id": "a6778d68-3c65-459d-b977-6a480984de59",
    "metadata": {
     "tags": []
@@ -849,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 75,
    "id": "5f4caa3b-1a8c-4b82-9876-2b5d64410066",
    "metadata": {},
    "outputs": [
@@ -875,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 76,
    "id": "dd4c3469-3589-453f-827d-1840f31f519a",
    "metadata": {},
    "outputs": [
@@ -904,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 77,
    "id": "7c34617a-f33c-410a-b8cc-87fc80b0a6ac",
    "metadata": {
     "tags": []
